--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <span>meetchrafay@gmail.com</span>
                     </div>
                 </div>
-                <a href="DSTP2.0-Batch-03_AFM101_2.pdf" title="Download CV" class="btn">Download CV (Growth)</a>
+                <a href="cv.pdf" title="Download CV" class="btn">Download CV (Growth)</a>
 
             </div>
         </div>
