--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
     <div class="footer">
         <h2>Rafay Portfolio</h2>
         <div class="footer-social">
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.facebook.com/iemabdulrafay/"><i class='bx bxl-facebook'></i></a>
+            <a href="https://x.com/iemAbdulRafay?s=20"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.instagram.com/iemabdulrafay"><i class='bx bxl-instagram'></i></a>
             <a href="#"><i class='bx bxl-youtube'></i></a>
         </div>
 
